eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-project-api-deployment
  labels:
    app: test-project-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-project-api
  template:
    metadata:
      labels:
        app: test-project-api
    spec:
      containers:
      - name: test-project-api
        image: 095420225348.dkr.ecr.ap-south-1.amazonaws.com/test-project:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
