eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project-api-service
spec:
  selector:
    app: test-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
