eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project-ingress
  annotations:
    cert-manager.io/cluster-issuer: 
spec:
  ingressClassName: nginx
  rules:
  - host: "api.test-project.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-project-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.test-project.org
    secretName: test-project-api-cert
